--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-! <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,5 @@
     
 </body>
 </html>
-   
 
 
